@@ -101,9 +101,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="global_p" eval="True"/>
         </record>
         <record model="ir.rule" id="rule_user_warning1">
-            <field name="field" search="[('name', '=', 'user'), ('model.model', '=', 'res.user.warning')]"/>
-            <field name="operator">=</field>
-            <field name="operand">User</field>
+            <field name="domain">[('user', '=', user.id)]</field>
             <field name="rule_group" ref="rule_group_user_warning"/>
         </record>
 
